--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -158,7 +158,7 @@
             </div>
             <div class="col-md-4 col-sm-6">
                 <a href="portfolio-item - 4.html">
-                    <img class="img-responsive img-portfolio img-hover" src="capture18.jpg" alt="">
+                    <img class="img-responsive img-portfolio img-hover" src="Capture18.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
