--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -153,12 +153,12 @@
             </div>
             <div class="col-md-4 col-sm-6">
                 <a href="portfolio-item - 2.html">
-                    <img class="img-responsive img-portfolio img-hover" src="Acorn.png" alt="">
+                    <img class="img-responsive img-portfolio img-hover" src="Main Walk.png" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
                 <a href="portfolio-item - 4.html">
-                    <img class="img-responsive img-portfolio img-hover" src="Capture18.jpg" alt="">
+                    <img class="img-responsive img-portfolio img-hover" src="Capture18.JPG" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
