--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -7,7 +7,8 @@
     <link rel="canonical" href="https://html5-templates.com/" />
     <title>Edwin Dykhoff</title>
 	<meta name="description" content="A minimalist Bootstrap theme by StartBootstrap. Contains everything you need to get started building your website. All you have to do is change the text and images.">
-    <link href="css/modern-business.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/modern-business.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
 
