--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -8,7 +8,7 @@
     <title>Edwin Dykhoff</title>
 	<meta name="description" content="A minimalist Bootstrap theme by StartBootstrap. Contains everything you need to get started building your website. All you have to do is change the text and images.">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/modern-business.css" rel="stylesheet">
+    <link href="css/modern-business.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -153,12 +153,12 @@
             </div>
             <div class="col-md-4 col-sm-6">
                 <a href="portfolio-item - 2.html">
-                    <img class="img-responsive img-portfolio img-hover" src="Main Walk.png" alt="">
+                    <img class="img-responsive img-portfolio img-hover" src="Acorn.png" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
                 <a href="portfolio-item - 4.html">
-                    <img class="img-responsive img-portfolio img-hover" src="Capture18.JPG" alt="">
+                    <img class="img-responsive img-portfolio img-hover" src="capture18.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
